--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoFinal_PGL_DAD_JMLH_LGC_ARA"
+        android:screenOrientation="portrait"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
